--- a/pluto/src/main/resources/application.properties
+++ b/pluto/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:admin}
 spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:admin}
 
-logging.level.com.example.pluto=INFO
+logging.level.com.pluto=INFO
 
 
