--- a/excelprocessor/src/main/resources/application.properties
+++ b/excelprocessor/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 
-spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
-spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
-spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:admin}
-spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:admin}
+# spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+# spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+# spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:admin}
+# spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:admin}
 
 
